crates/mecojoni-core/tests/fixtures/invalid/missing-module.meco
---
meco: 1.0
---

# greeting
- Hello.
